feat(TreatyAction): 添加外交条约集合
